Added Maven for better execution